public/newcss/style.css
@charset "UTF-8";
/*-----------------------------------------------------------------------------------

    Template Name: Glaxdu – Education Bootstrap 4 Template
    Version: 3 

-----------------------------------------------------------------------------------
    
    CSS INDEX
    ===================
	
    1. Template default CSS
    2. Header style
	3. Slider style
    4. choose us area
    5. About us
    6. Course area
    7. Achievement style
    8. Register style
    9. Teacher style
    10. Event area
    11. Blog style 
    12. footer area
    13. Banner style
    14. Product style
    15. Discount area
    16. Brand logo
    17. Blog details
    18. Cart page
    19. Checkout page
    20. Contact page
    21. Course details
    22. Event details page
    23. Product details page
    24. Shop page
    25. Sidebar style
    26. Video style
    
-----------------------------------------------------------------------------------*/
/*----------------------------------------*/
/*  1. Template default CSS
/*----------------------------------------*/
/*-- Google Font --*/
@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
/*-- Common Style --*/
*,
*::after,
*::before {
  -webkit-box-sizing: border-box;
  box-sizing: border-box; }

html,
body {
  height: 100%; }

body {
  background-color: #ffffff;
  line-height: 24px;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  font-family: "Roboto", sans-serif;
  color: #333; }

h1,
h2,
h3,
h4,
h5,
h6 {
  color: #333333;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  margin-top: 0; }

p {
  font-size: 14px;
  font-weight: 400;
  line-height: 24px;
  color: #333;
  margin-bottom: 15px; }

h1 {
  font-size: 36px;
  line-height: 42px; }

h2 {
  font-size: 30px;
  line-height: 36px; }

h3 {
  font-size: 24px;
  line-height: 30px; }

h4 {
  font-size: 18px;
  line-height: 24px; }

h5 {
  font-size: 14px;
  line-height: 18px; }

h6 {
  font-size: 12px;
  line-height: 14px; }

p:last-child {
  margin-bottom: 0; }

a,
button {
  color: inherit;
  line-height: inherit;
  text-decoration: none;
  cursor: pointer; }

a,
button,
img,
input,
span {
  -webkit-transition: all .3s ease 0s;
  -o-transition: all .3s ease 0s;
  transition: all .3s ease 0s; }

*:focus {
  outline: none !important; }

a:focus {
  color: inherit;
  outline: none;
  text-decoration: none; }

a:hover {
  text-decoration: none; }

button,
input[type="submit"] {
  cursor: pointer; }

ul {
  list-style: outside none none;
  margin: 0;
  padding: 0; }

/*-- 
    - Common Classes
-----------------------------------------*/
.fix {
  overflow: hidden; }

.hidden {
  display: none; }

.clear {
  clear: both; }

.section {
  float: left;
  width: 100%; }

.capitalize {
  text-transform: capitalize; }

.uppercase {
  text-transform: uppercase; }

.bg-img {
  background-position: center center;
  background-size: cover; }

.border-bottom-1 {
  border-bottom: 1px solid #d5d5d5; }

a:hover {
  color: #00a651; }

/*************************
  Basic margin padding
*************************/
.m-0 {
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0; }

.p-0 {
  padding-top: 0;
  padding-right: 0;
  padding-bottom: 0;
  padding-left: 0; }

/*************************
         Margin top
*************************/
.mt-0 {
  margin-top: 0; }

.mt-10 {
  margin-top: 10px; }

.mt-12 {
  margin-top: 12px; }

.mt-15 {
  margin-top: 15px; }

.mt-20 {
  margin-top: 20px; }

.mt-25 {
  margin-top: 25px; }

.mt-30 {
  margin-top: 30px; }

.mt-40 {
  margin-top: 40px; }

.mt-45 {
  margin-top: 45px; }

.mt-50 {
  margin-top: 50px; }

.mt-60 {
  margin-top: 60px; }

.mt-70 {
  margin-top: 70px; }

.mt-80 {
  margin-top: 80px; }
  @media only screen and (max-width: 767px) {
    .mt-80 {
      margin-top: 60px; } }

.mt-90 {
  margin-top: 90px; }

.mt-100 {
  margin-top: 100px; }

.mt-110 {
  margin-top: 110px; }

.mt-120 {
  margin-top: 120px; }

.mt-130 {
  margin-top: 130px; }

.mt-140 {
  margin-top: 140px; }

.mt-150 {
  margin-top: 150px; }

/*************************
      Margin right
*************************/
.mr-0 {
  margin-right: 0px; }

.mr-10 {
  margin-right: 10px; }

.mr-12 {
  margin-right: 12px; }

.mr-15 {
  margin-right: 15px; }

.mr-20 {
  margin-right: 20px; }

.mr-30 {
  margin-right: 30px; }

.mr-35 {
  margin-right: 35px; }

.mr-40 {
  margin-right: 40px; }

.mr-50 {
  margin-right: 50px; }

.mr-60 {
  margin-right: 60px; }

.mr-70 {
  margin-right: 70px; }

.mr-80 {
  margin-right: 80px; }

.mr-90 {
  margin-right: 90px; }

.mr-100 {
  margin-right: 100px; }

.mr-110 {
  margin-right: 110px; }

.mr-120 {
  margin-right: 120px; }

.mr-130 {
  margin-right: 130px; }

.mr-140 {
  margin-right: 140px; }

.mr-150 {
  margin-right: 150px; }

/*************************
      Margin bottom
*************************/
.mb-0 {
  margin-bottom: 0; }

.mb-10 {
  margin-bottom: 10px; }

.mb-12 {
  margin-bottom: 12px; }

.mb-15 {
  margin-bottom: 15px; }

.mb-20 {
  margin-bottom: 20px; }

.mb-30 {
  margin-bottom: 30px; }

.mb-35 {
  margin-bottom: 35px; }

.mb-40 {
  margin-bottom: 40px; }

.mb-45 {
  margin-bottom: 45px; }

.mb-50 {
  margin-bottom: 50px; }

.mb-55 {
  margin-bottom: 55px; }

.mb-60 {
  margin-bottom: 60px; }

.mb-65 {
  margin-bottom: 65px; }

.mb-70 {
  margin-bottom: 70px; }

.mb-75 {
  margin-bottom: 75px; }

.mb-80 {
  margin-bottom: 80px; }
  @media only screen and (max-width: 767px) {
    .mb-80 {
      margin-bottom: 60px; } }

.mb-90 {
  margin-bottom: 90px; }

.mb-95 {
  margin-bottom: 95px; }

.mb-100 {
  margin-bottom: 100px; }
  @media only screen and (max-width: 767px) {
    .mb-100 {
      margin-bottom: 50px; } }

.mb-110 {
  margin-bottom: 110px; }

.mb-120 {
  margin-bottom: 120px; }

.mb-130 {
  margin-bottom: 130px; }

.mb-140 {
  margin-bottom: 140px; }

.mb-150 {
  margin-bottom: 150px; }
/* ... */

